fix overflow-y of html  as auto

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,3 +11,7 @@
 .fa-caret-down,.fa-caret-up{
     cursor: pointer;
 }
+
+html{
+    overflow-y: auto;
+}
